--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
-version = "mc${project.supported_versions}-${project.mod_version}"
+version = "mc${project.supported_versions}-v${project.mod_version}"
 group = project.maven_group
 
 repositories {
@@ -45,6 +45,22 @@ processResources {
 	filesMatching("fabric.mod.json") {
 		expand "mod_version": project.mod_version
 	}
+
+	def changelogFormatText = file("docs/changelogs/format.md").text.trim()
+	def changelogText = file("docs/changelogs/${project.mod_version}.md").text.trim()
+	def lastVersion = changelogText.split("\n")[0].split("=")[1].trim()
+	def changelog = changelogFormatText
+			.replace("%changelog%", changelogText)
+			.replace("%version%", project.mod_version)
+			.replace("%mc_versions%", project.supported_versions)
+			.replace("%last_version%", lastVersion)
+	StringBuilder changelogBuilder = new StringBuilder()
+	for (String line : changelog.split("\n")) {
+		if (!line.startsWith("!"))
+			changelogBuilder.append(line).append("\n")
+	}
+	if (!rootProject.buildDir.exists()) rootProject.buildDir.mkdirs()
+	new File(rootProject.buildDir, "CHANGELOG.md").text = changelogBuilder.toString().trim()
 }
 
 tasks.withType(JavaCompile).configureEach {
