--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,maven,intellij,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,intellij,gradle
 
+run/
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
